--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,49 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Zapatería Aether</title>
+  <title>Aurora Shoes</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: "Poppins", sans-serif;
+      background-color: #f7f6fc;
+    }
+    .navbar {
+      background-color: #6f42c1 !important;
+    }
+    .btn-primary {
+      background-color: #6f42c1;
+      border-color: #6f42c1;
+    }
+    .btn-primary:hover {
+      background-color: #5a34a3;
+      border-color: #5a34a3;
+    }
+    footer {
+      background-color: #6f42c1;
+    }
+  </style>
 </head>
 <body class="bg-light">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="/">Zapatería Aether</a>
+      <a class="navbar-brand d-flex align-items-center gap-2" href="/">
+        <img src="img/logo.png" alt="Aurora Shoes Logo" height="32">
+        <strong>Aurora Shoes</strong>
+      </a>
       <div class="d-flex">
-        <a href="/cart.html" class="btn btn-outline-light">Carrito <span id="cart-count" class="badge bg-warning text-dark ms-1">0</span></a>
+        <a href="/cart.html" class="btn btn-outline-light">
+          Carrito <span id="cart-count" class="badge bg-warning text-dark ms-1">0</span>
+        </a>
       </div>
     </div>
   </nav>
 
   <header class="py-5 text-center bg-white border-bottom">
     <div class="container">
-      <h1 class="display-5 fw-bold">Tu nueva tienda de zapatos</h1>
-      <p class="lead text-muted">Bootstrap + Express (TypeScript). Productos de ejemplo y carrito por sesión.</p>
+      <h1 class="display-5 fw-bold text-dark">Descubre tu estilo con Aurora Shoes</h1>
+      <p class="lead text-muted">Calzado moderno, cómodo y a tu medida.</p>
     </div>
   </header>
 
@@ -27,15 +53,15 @@
     <div id="product-list" class="row g-4"></div>
   </main>
 
-  <footer class="py-5 bg-dark text-light">
-    <div class="container text-center">
-      <p class="mb-0">&copy; <span id="year"></span> Zapatería Aether</p>
+  <footer class="py-4 text-light text-center">
+    <div class="container">
+      <p class="mb-0">&copy; <span id="year"></span> Aurora Shoes — Todos los derechos reservados.</p>
     </div>
   </footer>
 
   <script src="js/app.js" type="module"></script>
   <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
+    document.getElementById("year").textContent = new Date().getFullYear();
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
