--- a/public/cart.html
+++ b/public/cart.html
@@ -3,24 +3,50 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Carrito - Zapatería Aether</title>
+  <title>Carrito - Aurora Shoes</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: "Poppins", sans-serif;
+      background-color: #f7f6fc;
+    }
+    .navbar {
+      background-color: #6f42c1 !important;
+    }
+    .btn-primary {
+      background-color: #6f42c1;
+      border-color: #6f42c1;
+    }
+    .btn-primary:hover {
+      background-color: #5a34a3;
+      border-color: #5a34a3;
+    }
+    footer {
+      background-color: #6f42c1;
+    }
+  </style>
 </head>
 <body class="bg-light">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="/">Zapatería Aether</a>
+      <a class="navbar-brand d-flex align-items-center gap-2" href="/">
+        <img src="img/logo.png" alt="Aurora Shoes Logo" height="32">
+        <strong>Aurora Shoes</strong>
+      </a>
       <div class="d-flex">
-        <a href="/cart.html" class="btn btn-outline-light">Carrito <span id="cart-count" class="badge bg-warning text-dark ms-1">0</span></a>
+        <a href="/cart.html" class="btn btn-outline-light">
+          Carrito <span id="cart-count" class="badge bg-warning text-dark ms-1">0</span>
+        </a>
       </div>
     </div>
   </nav>
 
   <main class="container py-5">
-    <h1 class="mb-4">Carrito</h1>
+    <h1 class="mb-4 fw-bold text-dark">Tu carrito de compras</h1>
     <div class="table-responsive">
-      <table class="table table-striped align-middle">
-        <thead>
+      <table class="table table-striped align-middle shadow-sm">
+        <thead class="table-light">
           <tr>
             <th>Producto</th>
             <th>Cantidad</th>
@@ -32,19 +58,28 @@
         <tfoot>
           <tr>
             <th colspan="2" class="text-end">Total</th>
-            <th id="cart-total">$0</th>
+            <th id="cart-total" class="text-primary fw-bold">$0</th>
             <th></th>
           </tr>
         </tfoot>
       </table>
     </div>
-    <div class="d-flex gap-2">
+    <div class="d-flex gap-2 mt-3">
       <button id="btn-clear" class="btn btn-outline-danger">Vaciar carrito</button>
       <a href="/" class="btn btn-primary">Seguir comprando</a>
     </div>
   </main>
 
+  <footer class="py-4 text-light text-center">
+    <div class="container">
+      <p class="mb-0">&copy; <span id="year"></span> Aurora Shoes — Todos los derechos reservados.</p>
+    </div>
+  </footer>
+
   <script src="js/cart.js" type="module"></script>
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
