--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 
   <footer class="py-4 text-light text-center">
     <div class="container">
-      <p class="mb-0">&copy; <span id="year"></span> Aurora Shoes — Todos los derechos reservados.</p>
+      <p class="mb-0">&copy; <span id="year"></span> Aurora Shoes — Programación Web.</p>
     </div>
   </footer>
 
