--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,12 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Aurora Shoes</title>
+
+  <!-- Bootstrap y fuente -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
+  <!-- Estilos personalizados -->
   <style>
     body {
       font-family: "Poppins", sans-serif;
@@ -28,6 +32,7 @@
   </style>
 </head>
 <body class="bg-light">
+  <!-- 🔹 Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center gap-2" href="/">
@@ -42,6 +47,7 @@
     </div>
   </nav>
 
+  <!-- 🔹 Header -->
   <header class="py-5 text-center bg-white border-bottom">
     <div class="container">
       <h1 class="display-5 fw-bold text-dark">Descubre tu estilo con Aurora Shoes</h1>
@@ -49,16 +55,40 @@
     </div>
   </header>
 
+  <!-- 🔹 Contenido principal -->
   <main class="container py-4">
+
+    <!-- 🔍 Barra de búsqueda -->
+    <div class="card shadow-sm mb-4">
+      <div class="card-body">
+        <form id="search-form" class="row g-3 align-items-center">
+          <div class="col-md-4">
+            <input type="text" id="search-name" class="form-control" placeholder="Buscar por nombre...">
+          </div>
+          <div class="col-md-3">
+            <input type="number" id="min-price" class="form-control" placeholder="Precio mínimo (COP)">
+          </div>
+          <div class="col-md-3">
+            <input type="number" id="max-price" class="form-control" placeholder="Precio máximo (COP)">
+          </div>
+          <div class="col-md-2 text-end">
+            <button type="submit" class="btn btn-primary w-100">Filtrar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
     <div id="product-list" class="row g-4"></div>
   </main>
 
+  <!-- 🔹 Footer -->
   <footer class="py-4 text-light text-center">
     <div class="container">
       <p class="mb-0">&copy; <span id="year"></span> Aurora Shoes — Programación Web.</p>
     </div>
   </footer>
 
+  <!-- Scripts -->
   <script src="js/app.js" type="module"></script>
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
